<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/clr_white"
    android:clickable="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/pokkttoolbarparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/pokkttoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/txt_btn_ad_type_fullscreen"
            app:navigationIcon="?attr/homeAsUpIndicator">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="-30"
        android:scaleType="fitCenter"
        android:src="@drawable/pokkt_logo" />

    <TextView
        android:id="@+id/txt_message_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:text=""
        android:textColor="@color/clr_grey"
        android:textSize="@dimen/dimen_txt_size" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/txt_message_id"
        android:layout_below="@id/pokkttoolbarparent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_screen_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:text="@string/txt_screen_name"
                android:textColor="@color/clr_grey"
                android:textSize="@dimen/dimen_txt_size" />

            <EditText
                android:id="@+id/edt_screen_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/drawable_edt_bg"
                android:padding="@dimen/dimen_5dp"
                android:hint="@string/txt_place_holder"
                android:textColor="@color/clr_grey"
                android:textColorHint="@color/clr_grey"
                android:textSize="@dimen/dimen_edt_txt_size" />

            <include
                android:id="@+id/btn_cache"
                layout="@layout/layout_button" />

            <include
                android:id="@+id/btn_show"
                layout="@layout/layout_button" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>