<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="-30"
        android:scaleType="fitCenter"
        android:src="@drawable/pokkt_logo" />

    <TextView
        android:id="@+id/txt_ad_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/txt_btn_ad_type_banner"
        android:textColor="@color/clr_grey"
        android:textSize="@dimen/dimen_txt_size" />

    <com.pokkt.sdk.banners.PokktBannerView
        android:id="@+id/pokkt_banner_view_top"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_below="@id/txt_ad_type"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp" />

    <com.pokkt.sdk.banners.PokktBannerView
        android:id="@+id/pokkt_banner_view_bottom"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_10dp" />

    <ScrollView
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pokkt_banner_view_bottom"
        android:layout_below="@id/pokkt_banner_view_top"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:context="com.pokkt.demo.fragments.PokktAdTypeFragment">

            <TextView
                android:id="@+id/txt_screen_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:text="@string/txt_screen_name"
                android:textColor="@color/clr_grey"
                android:textSize="@dimen/dimen_txt_size" />

            <EditText
                android:id="@+id/edt_screen_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:background="@drawable/drawable_edt_bg"
                android:padding="@dimen/dimen_5dp"
                android:singleLine="true"
                android:text="@string/txt_place_holder"
                android:textColor="@color/clr_grey"
                android:textSize="@dimen/dimen_edt_txt_size" />

            <include
                android:id="@+id/btn_load_banner"
                layout="@layout/layout_button" />

            <include
                android:id="@+id/btn_destroy_banner"
                layout="@layout/layout_button" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dimen_40dp" />

            <include
                android:id="@+id/btn_load_second_banner"
                layout="@layout/layout_button" />

            <include
                android:id="@+id/btn_destroy_second_banner"
                layout="@layout/layout_button" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>